Modify block node properties and docs
Signed-off-by: sdimitrov9 <stoyan.dimitrov@limechain.tech>